Adding torque API.
