# swagger_server/controllers/grip_controller.py
@@ -1,6 +1,6 @@
 import connexion
-from swagger_server.models.body import Body
-from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.location import Location
+from swagger_server.models.state import State
 from swagger_server.common.constants import AX12
 
 
@@ -11,16 +11,35 @@ def change_grip(body):
     :param body: Location object
     :type body: dict | bytes
 
-    :rtype: InlineResponse200
+    :rtype: Location
     """
     if connexion.request.is_json:
-        body = Body.from_dict(connexion.request.get_json())
+        body = Location.from_dict(connexion.request.get_json())
 
     location = body.location
 
     AX12.grip(location)
 
-    return InlineResponse200(location)
+    return Location(location)
+
+
+def change_grip_torque(body):
+    """
+    Set grip torque
+
+    :param body: State object
+    :type body: dict | bytes
+
+    :rtype: State
+    """
+    if connexion.request.is_json:
+        body = State.from_dict(connexion.request.get_json())
+
+    state = body.state
+
+    AX12.set_elbow_state(state)
+
+    return State(state)
 
 
 def read_grip():
@@ -28,8 +47,18 @@ def read_grip():
     Get grip location
 
 
-    :rtype: InlineResponse200
+    :rtype: Location
     """
     location = AX12.get_grip()
 
-    return InlineResponse200(location)
+    return Location(location)
+
+
+def read_grip_torque():
+    """
+    Get grip torque
+
+
+    :rtype: State
+    """
+    return State(True)
