# swagger_server/controllers/pivot_controller.py
@@ -1,6 +1,6 @@
 import connexion
-from swagger_server.models.body5 import Body5
-from swagger_server.models.inline_response200 import InlineResponse200
+from swagger_server.models.location import Location
+from swagger_server.models.state import State
 from swagger_server.common.constants import AX12
 
 
@@ -11,16 +11,35 @@ def change_pivot(body):
     :param body: Location object
     :type body: dict | bytes
 
-    :rtype: InlineResponse200
+    :rtype: Location
     """
     if connexion.request.is_json:
-        body = Body5.from_dict(connexion.request.get_json())
+        body = Location.from_dict(connexion.request.get_json())
 
     location = body.location
 
     AX12.pivot(location)
 
-    return InlineResponse200(location)
+    return Location(location)
+
+
+def change_pivot_torque(body):
+    """
+    Set pivot torque
+
+    :param body: State object
+    :type body: dict | bytes
+
+    :rtype: State
+    """
+    if connexion.request.is_json:
+        body = State.from_dict(connexion.request.get_json())
+
+    state = body.state
+
+    AX12.set_hand_state(state)
+
+    return State(state)
 
 
 def read_pivot():
@@ -28,8 +47,18 @@ def read_pivot():
     Get pivot location
 
 
-    :rtype: InlineResponse200
+    :rtype: Location
     """
     location = AX12.get_pivot()
 
-    return InlineResponse200(location)
+    return Location(location)
+
+
+def read_pivot_torque():
+    """
+    Get pivot torque
+
+
+    :rtype: State
+    """
+    return State(True)
